@@ -3,6 +3,7 @@ package com.example.homework.homeworkcollectionsone.departments;
 import com.example.homework.homeworkcollectionsone.employees.Employee;
 import com.example.homework.homeworkcollectionsone.employees.EmployeeServiceImpl;
 import com.example.homework.homeworkcollectionsone.exceptions.EmployeeNotFoundException;
+import com.example.homework.homeworkcollectionsone.exceptions.WrongDepartmentIdException;
 import org.springframework.stereotype.Service;
 
 import java.util.Comparator;
@@ -12,39 +13,65 @@ import java.util.stream.Collectors;
 @Service
 public class DepartmentServiceImpl implements DepartmentService {
     private final EmployeeServiceImpl employeeService;
+    private final int departmentCount = 5;
 
     public DepartmentServiceImpl(EmployeeServiceImpl employeeService) {
         this.employeeService = employeeService;
     }
 
     @Override
-    public Employee getMinSalaryEmployee(int departmentNumber) {
+    public int getMinSalaryEmployee(int id) {
+        if (id > 5 || id <= 0) {
+            throw new WrongDepartmentIdException();
+        }
         return employeeService.getEmployeeList().values().stream()
-                .filter(e -> e.getDepartment() == departmentNumber)
+                .filter(e -> e.getDepartment() == id)
                 .min(Comparator.comparingInt(Employee::getSalary))
-                .orElseThrow(EmployeeNotFoundException::new);
+                .orElseThrow(EmployeeNotFoundException::new).getSalary();
     }
 
     @Override
-    public Employee getMaxSalaryEmployee(int departmentNumber) {
+    public int getMaxSalaryEmployee(int id) {
+        if (id > 5 || id <= 0) {
+            throw new WrongDepartmentIdException();
+        }
         return employeeService.getEmployeeList().values().stream()
-                .filter(e -> e.getDepartment() == departmentNumber)
+                .filter(e -> e.getDepartment() == id)
                 .max(Comparator.comparingInt(Employee::getSalary))
-                .orElseThrow(EmployeeNotFoundException::new);
+                .orElseThrow(EmployeeNotFoundException::new).getSalary();
     }
 
     @Override
-    public Object getDepartmentEmployees(Integer departmentNumber) {
+    public int getSumSalaryEmployee(int id) {
+        if (id > 5 || id <= 0) {
+            throw new WrongDepartmentIdException();
+        }
+        return employeeService.getEmployeeList().values().stream()
+                .filter(e -> e.getDepartment() == id)
+                .mapToInt(Employee::getSalary).sum();
+    }
+
+    @Override
+    public Object getDepartmentEmployees(int id) {
+        if (id > 5 || id <= 0) {
+            throw new WrongDepartmentIdException();
+        }
         List<Employee> employees = employeeService.getEmployeeList()
                 .values().stream().
                 toList();
-        if (departmentNumber == null) {
-            return employees.stream()
-                    .collect(Collectors.groupingBy(Employee::getDepartment, Collectors.toList()));
-        } else {
-            return employees.stream()
-                    .filter(e -> e.getDepartment() == departmentNumber)
-                    .toList();
-        }
+        return employees.stream()
+                .filter(e -> e.getDepartment() == id)
+                .toList();
+
+    }
+
+    @Override
+    public Object getEmployeesGroupedByDepartment() {
+        List<Employee> employees = employeeService.getEmployeeList()
+                .values().stream().
+                toList();
+        return employees.stream()
+                .collect(Collectors.groupingBy(Employee::getDepartment, Collectors.toList()));
+
     }
 }
